--- a/ProGM.Client/Properties/Resources.resx
+++ b/ProGM.Client/Properties/Resources.resx
@@ -172,4 +172,19 @@
   <data name="clear" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\clear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_1phut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1phut.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="_2phut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2phut.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="_3phut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3phut.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="_4phut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\4phut.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="_5phut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\5phut.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
